refactor(glossary): `datatransport` to `patch`
PATCH as in the HTTP method
meant to be used to partially update data
which is exactly what data-transport services help in doing