@@ -18,47 +18,39 @@
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-package org.trebol.jpa.services.crud.impl;
+package org.trebol.jpa.services.patch.impl;
 
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.NoArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.trebol.api.models.ImagePojo;
 import org.trebol.common.exceptions.BadInputException;
 import org.trebol.jpa.entities.Image;
-import org.trebol.jpa.repositories.ImagesRepository;
-import org.trebol.jpa.services.conversion.ImagesConverterService;
-import org.trebol.jpa.services.crud.CrudGenericService;
-import org.trebol.jpa.services.crud.ImagesCrudService;
 import org.trebol.jpa.services.patch.ImagesPatchService;
 
-import java.util.Optional;
-
-@Transactional
 @Service
-public class ImagesCrudServiceImpl
-  extends CrudGenericService<ImagePojo, Image>
-  implements ImagesCrudService {
-  private final ImagesRepository imagesRepository;
-
-  @Autowired
-  public ImagesCrudServiceImpl(
-    ImagesRepository imagesRepository,
-    ImagesConverterService imagesConverterService,
-    ImagesPatchService imagesPatchService
-  ) {
-    super(imagesRepository, imagesConverterService, imagesPatchService);
-    this.imagesRepository = imagesRepository;
-  }
+@NoArgsConstructor
+public class ImagesPatchServiceImpl
+  implements ImagesPatchService {
 
   @Override
-  public Optional<Image> getExisting(ImagePojo input) throws BadInputException {
-    String name = input.getFilename();
-    if (StringUtils.isBlank(name)) {
-      throw new BadInputException("Invalid filename");
-    } else {
-      return imagesRepository.findByFilename(name);
+  public Image patchExistingEntity(ImagePojo changes, Image existing) throws BadInputException {
+    Image target = new Image(existing);
+
+    String code = changes.getCode();
+    if (code != null && !code.isBlank() && !target.getCode().equals(code)) {
+      target.setCode(code);
     }
+
+    String filename = changes.getFilename();
+    if (filename != null && !filename.isBlank() && !target.getFilename().equals(filename)) {
+      target.setFilename(filename);
+    }
+
+    String url = changes.getUrl();
+    if (url != null && !url.isBlank() && !target.getUrl().equals(url)) {
+      target.setUrl(url);
+    }
+
+    return target;
   }
 }
